--- a/src/components/home/Mainpost/Mainpost.css
+++ b/src/components/home/Mainpost/Mainpost.css
@@ -20,8 +20,7 @@
 .post_account_name{
     text-align: center;
     margin: 20px 0px 0px 7px;
-    font-size: .9rem;
-    
+    font-size: 15px;
 }
 
 .post_moreoption{
@@ -32,9 +31,9 @@
     margin: 20px 0px 0px 280px;
 }
 .post_img{
-    height: auto;
-    /* width: auto; */
-    width: 470px;
+    height: 469px;
+    width: 469px;
+    margin-left: -6px;
 }
 .post_like_data{
     display: flex;
