--- a/src/components/messages/ConversationPerson.css
+++ b/src/components/messages/ConversationPerson.css
@@ -12,10 +12,12 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    object-fit: cover;
+    /* object-fit: cover; */
     margin-right: 20px;
 }
 
 .ConversationName {
-    font-weight: 500;
+    margin: 10px 0px 0px 0px;
+    font-size: 1.1rem ;
+    font-weight: 600;
 }
