--- a/src/components/home/Stories/Stories.css
+++ b/src/components/home/Stories/Stories.css
@@ -15,12 +15,10 @@
 
 .stories_icon {
     margin: 10px 0px -5px 10px;
-    width: 50px;
-    height: 50px;
     display: inline-block;
-    border: 2px solid red;
     border-radius: 50%;
     cursor: pointer;
+    scroll-behavior: smooth;
 }
 
 .profile_name {
@@ -28,5 +26,5 @@
     text-decoration: none;
     color: black;
     text-align: center;
-    margin-left: 18px;
+    margin-left: 10px;
 }
